WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224487
[GTK4] WTR crash in PlatformWebView::dismissAllPopupMenus()
https://bugs.webkit.org/show_bug.cgi?id=224487
Summary
[GTK4] WTR crash in PlatformWebView::dismissAllPopupMenus()
Carlos Garcia Campos
Reported
2021-04-13 07:48:45 PDT
This is because we are using a for loop to iterate children that are destroyed. We should not be destroying the children, though, we should just hide them, since they are owned by the web view. Thread 1 (Thread 0x7f652fd72f00 (LWP 14765)): #0 0x00007f6532bfc29e in gtk_widget_get_next_sibling (widget=0x55e0bee56260) at ../gtk/gtkwidget.c:11879 #1 0x000055e0b80df0f5 in WTR::PlatformWebView::dismissAllPopupMenus() () #2 0x000055e0b80dfb65 in WTR::TestController::platformResetStateToConsistentValues(WTR::TestOptions const&) () #3 0x000055e0b80b8bb3 in WTR::TestController::resetStateToConsistentValues(WTR::TestOptions const&, WTR::TestController::ResetStage) () #4 0x000055e0b80c6d85 in WTR::TestInvocation::invoke() () #5 0x000055e0b80afbaa in WTR::TestController::runTest(char const*) () #6 0x000055e0b80b027f in WTR::TestController::runTestingServerLoop() () #7 0x000055e0b80b0848 in WTR::TestController::TestController(int, char const**) () #8 0x000055e0b80a004c in main ()
Attachments
Patch
(1.44 KB, patch)
2021-04-13 07:50 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2021-04-13 07:50:09 PDT
Created
attachment 425872
[details]
Patch
EWS
Comment 2
2021-04-13 08:30:56 PDT
Committed
r275885
(
236450@main
): <
https://commits.webkit.org/236450@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 425872
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-04-13 08:31:14 PDT
<
rdar://problem/76592882
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug